# ncurses-tetris

./: CMakeLists.txt  README.md  build.sh  checklist.txt  final_report.txt  project_info.sh
.cache/clangd/index/: I.cpp.C49F1798813D2C94.idx  I.h.E18436F6B654478A.idx  L.cpp.25CE6C7D1601FFB4.idx  L.cpp.6BDD65BAE0711366.idx  L.h.55B07ACA94C4A252.idx  L.h.8FB3CB36C770762C.idx  T.cpp.A8F80B845DFB56CB.idx  T.h.07A02A26126E064D.idx  board.cpp.4A3236667CCAC7DE.idx  board.h.127AE65F0AD2517E.idx  constants.h.A28A6A5E73EFAE5E.idx  exceptions.h.69C558C82C4632C4.idx  game.cpp.F4E3A80F79468547.idx  game.h.CF46C2AA87ECBF1E.idx  main.cpp.B9CE7EFA3EBC73BC.idx  menu.cpp.C85F6DBB21452A55.idx  menu.h.7E88614A4E0BA815.idx  square.cpp.901B11E54C784383.idx  square.h.C7CD423066EEED0B.idx  tetrimino.cpp.876621F55B01BCBF.idx  tetrimino.cpp.BC0053D1DE7FCA06.idx  tetrimino.h.0062740B38A348A5.idx  tetrimino.h.309A178BA9565362.idx
src/: L.cpp  L.h  board.cpp  board.h  constants.h  exceptions.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  position.hpp  tetrimino.cpp  tetrimino.h
src/tetriminos/: I.cpp  I.h  L.cpp  L.h  T.cpp  T.h  square.cpp  square.h  tetrimino.cpp  tetrimino.h
